examples/test/testpolicy19541.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy19541
  namespace: namespace194
spec:
  podSelector:
    matchLabels:
      key41: value8
      key0: value34
      key45: value17
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key40: value34
          key20: value20
      podSelector:
        matchLabels:
          key45: value29
          key5: value41
          key17: value3
